<resources>
    <string name="app_name">Mobiiliapplikaatiotutkimus</string>
    <string name="title_activity_hyks">MoMoMood Pilot</string>

    <string name="secret_id_hint_text">device secret id</string>
    <string name="core_syncing_data">Syncing data...</string>
    <string name="core_starting_schedule">Starting schedule</string>
    <string name="core_thanks_for_joining">Thanks for joining!</string>
    <string name="currently_joined">Thanks for participating in this study.</string>
    <string name="core_secret_id_error">Join must be either URL or 16-digit secret ID</string>
    <string name="core_secret_id_checksum_error">Secret ID was probably typed wrong</string>
    <string name="config_usual_wakeup_hour">Usual wakeup hour:</string>
    <string name="config_usual_bedtime_hour">Usual bedtime hour:</string>
    <string name="button_join">Join</string>
    <string name="button_synchronise">Synchronise</string>
    <string name="button_set_schedule">Set Schedule</string>
    <string name="button_settings">Settings</string>
    <string name="warning_missing_answer">Muista täyttää kaikki kysymykset!</string>
    <string name="setting_plugin_status">Activate/deactivate plugin</string>
    <string name="setting_start_hour">Usual wakeup hour</string>
    <string name="setting_end_hour">Usual bedtime hour (0-23)</string>

    <string name="submit">Lähetä</string>
    <string name="esm_scale_yes">KYLLÄ</string>
    <string name="esm_scale_no">EI</string>
    <string name="esm_submit">OK</string>

    <string name="morning_1">Kuinka kauan kesti ennen kuin nukahdit?</string>
    <string name="morning_1_0_15">0-15 min</string>
    <string name="morning_1_15_30">15-30 min</string>
    <string name="morning_1_30_60">30-60 min</string>
    <string name="morning_1_60_plus">yli 60 min</string>
    <string name="morning_2">Kuinka monta kertaa heräsit yön aikana?</string>
    <string name="morning_2_0_1">0-1</string>
    <string name="morning_2_2_3">2-3</string>
    <string name="morning_2_4_5">4-5</string>
    <string name="morning_2_5_plus">enemmän kuin 5</string>
    <string name="morning_3">Kuinka kauan olit hereillä ennen kuin nousit ylös aamulla?</string>
    <string name="morning_3_0_15">0-15 min</string>
    <string name="morning_3_15_30">15-30 min</string>
    <string name="morning_3_30_60">30-60 min</string>
    <string name="morning_3_60_plus">yli 60 min</string>
    <string name="morning_4">Nukuitko hyvin?</string>
    <string name="morning_5">Mihin aikaan nukahdit? (HH:MM)</string>
    <string name="morning_6">Mihin aikaan heräsit? (HH:MM)</string>

    <string name="evening_1">Tämä oli tavanomainen päivä.</string>
    <string name="evening_2">Kysymyksiin vastaaminen vaikutti mielialaani.</string>
    <string name="evening_3">Ilman laitetta olisin tehnyt eri asioita.</string>

    <string name="title_activity_olo">@string/app_name</string>
    <string name="olo_instructions">Juuri nyt tunnen itseni:</string>
    <string name="olo_notification_title">Kyselylomake odottaa vastaustasi</string>
    <string name="olo_notification_text">Avaa lomake vastataksesi kyselyyn</string>
    <string name="olo_lickert_left">Ei</string>
    <string name="olo_lickert_right">Kyllä</string>
    <string name="olo_1_1">Juuri nyt tunnen itseni iloiseksi</string>
    <string name="olo_1_2">Juuri nyt tunnen itseni väsyneeksi</string>
    <string name="olo_1_3">Juuri nyt tunnen itseni tyytyväiseksi</string>
    <string name="olo_1_4">Juuri nyt tunnen itseni hermostuneeksi</string>
    <string name="olo_1_5">Juuri nyt tunnen itseni rauhalliseksi</string>
    <string name="olo_1_6">Juuri nyt tunnen itseni surulliseksi</string>
    <string name="olo_1_7">Juuri nyt tunnen itseni innostuneeksi</string>
    <string name="olo_1_8">Juuri nyt tunnen itseni aktiiviseksi</string>

    <string name="olo_2">Mieti, mitä olit tekemässä juuri ennen piippausta</string>
    <string name="olo_2_1">Nautin tästä tekemisestä</string>
    <string name="olo_2_2">Pystyn tekemään tämän hyvin</string>
    <string name="olo_2_3">Tämä vaatii ponnistelua</string>
    <string name="olo_2_4">Mitä olit tekemässä juuri ennen piippausta</string>
    <string name="olo_2_4_1">työ/opiskelu</string>
    <string name="olo_2_4_2">fyysinen aktiviteetti</string>
    <string name="olo_2_4_3">media/lukeminen</string>
    <string name="olo_2_4_4">passiivinen oleskelu</string>
    <string name="olo_2_4_5">arkiaskareet</string>
    <string name="olo_2_4_6">vuorovaikutus</string>
    <string name="olo_2_4_7">syöminen</string>
    <string name="olo_2_4_8">muu</string>

    <string name="olo_3">Mieti tärkeintä tapahtumaa edellisen piippauksen jälkeen</string>
    <string name="olo_3_1">Kuinka miellyttävä tapahtuma oli</string>
    <string name="olo_3_1_left">:( Epämiellyttävinä</string>
    <string name="olo_3_1_right">:) Miellyttävinä</string>
    <string name="olo_3_2">Mihin tärkein tapahtuma liittyi</string>
    <string name="olo_3_2_1">työ/opiskelu</string>
    <string name="olo_3_2_2">fyysinen aktiviteetti</string>
    <string name="olo_3_2_3">media/lukeminen</string>
    <string name="olo_3_2_4">passiivinen oleskelu</string>
    <string name="olo_3_2_5">arkiaskareet</string>
    <string name="olo_3_2_6">vuorovaikutus</string>
    <string name="olo_3_2_7">syöminen</string>
    <string name="olo_3_2_8">muu</string>
    <string name="olo_3_3">Juuri nyt olen yksin</string>
    <string name="olo_3_3_1">Kyllä</string>
    <string name="olo_3_3_2">En</string>
    
    <string name="olo_3_3_1_1">Mieti, kenen kanssa olet juuri nyt</string>
    <string name="olo_3_3_1_2">Koen nämä ihmiset miellyttävinä</string>
    <string name="olo_3_3_1_3">Olen vuorovaikutuksessa näiden ihmisten kanssa</string>
    <string name="olo_3_3_1_4">Olisin mieluummin yksin</string>
    <string name="olo_3_3_1_5">Kenen kanssa olet juuri nyt?</string>
    <string name="olo_3_3_1_5_1">puoliso/kumppani</string>
    <string name="olo_3_3_1_5_2">muu perheenjäsen</string>
    <string name="olo_3_3_1_5_3">ystävä</string>
    <string name="olo_3_3_1_5_4">työ-/opiskelukaveri</string>
    <string name="olo_3_3_1_5_5">tuntematon</string>
    <string name="olo_3_3_1_5_6">muu</string>
    
    <string name="olo_3_3_2_1">Olen yksin, koska haluan olla yksin</string>
    
    <string name="olo_4">Edellisen piippauksen jälkeen...</string>
    <string name="olo_4_1">Montako annosta kahvia tai muuta kofeiinipitoista juomaa olet juonut</string>
    <string name="olo_4_1_1">0</string>
    <string name="olo_4_1_2">0,5-1</string>
    <string name="olo_4_1_3">2-3</string>
    <string name="olo_4_1_4">4-5</string>
    <string name="olo_4_1_5">yli 5</string>
    <string name="olo_4_2">Montako savuketta olet polttanut</string>
    <string name="olo_4_2_1">0</string>
    <string name="olo_4_2_2">1-2</string>
    <string name="olo_4_2_3">3-4</string>
    <string name="olo_4_2_4">5-6</string>
    <string name="olo_4_2_5">yli 6</string>
    <string name="olo_4_3">Montako ravintola-annosta alkoholia olet juonut</string>
    <string name="olo_4_3_1">0</string>
    <string name="olo_4_3_2">1-4</string>
    <string name="olo_4_3_3">3-5</string>
    <string name="olo_4_3_4">yli 5</string>
    <string name="olo_4_4">Oleko syönyt aterian</string>
    <string name="olo_4_5">Oletko syönyt välipalan</string>
    <string name="olo_4_6">Oletko harrastanut hyötyliikuntaa vähintään 10 min</string>
    <string name="olo_4_7">Oletko harrastanut kuntoliikuntaa vähintään 30min</string>
    <string name="olo_4_7_1">Kuinka raskasta kuntoliikuntaa harrastit</string>
    <string name="olo_4_7_2">Tämä piippaus häiritsi minua</string>
    <string name="olo_4_7_1_1">kevyt</string>
    <string name="olo_4_7_1_2">keskiraskas</string>
    <string name="olo_4_7_1_3">raskas</string>

    <string name="title_activity_phq9">@string/app_name</string>
    <string name="phq9_notification_title">Kyselylomake odottaa vastaustasi</string>
    <string name="phq9_notification_text">Avaa lomake vastataksesi kyselyyn</string>
    <string name="phq9_instructions">Kuinka usein seuraavat ongelmat ovat vaivanneet teitä viimeisten 2 viikon aikana?</string>
    <string name="phq9_1">Asioiden tekeminen kiinnostaa hyvin vähän tai ei juuri tuota mielihyvää</string>
    <string name="phq9_2">Alakuloisuus, masentuneisuus tai toivottomuus</string>
    <string name="phq9_3">Nukahtamis- tai nukkumisvaikeudet tai liiallinen nukkuminen</string>
    <string name="phq9_4">Väsymys tai energian puute</string>
    <string name="phq9_5">Huono ruokahalu tai ylensyöminen</string>
    <string name="phq9_6">Tyytymättömyys omaan itseen – tai tunne, että olette epäonnistuneet tai laiminlyöneet itsenne tai perheenne</string>
    <string name="phq9_7">Vaikeus keskittyä asioihin, kuten lehden lukemiseen tai television katseluun</string>
    <string name="phq9_8">Liikutteko tai puhutteko niin hitaasti, että muut ihmiset ovat saattaneet huomata? Tai päinvastoin - oletteko olleet niin hermostunut tai levoton, että olette liikkuneet paljon tavallista enemmän</string>
    <string name="phq9_9">Ajatukset, että voisi olla yhtä hyvin kuollut tai, että voisi vahingoittaa itseään jollakin tavalla</string>
    <string name="phq9_extra">Jos teillä on ollut jokin ongelma, niin kuinka vaikeaa teidän on ollut huolehtia työstänne, kotiasioistanne tai tulla toimeen muiden ihmisten kanssa näiden ongelmien vuoksi?</string>
    <string name="phq9_answer_1">Ei lainkaan</string>
    <string name="phq9_answer_2">Useina päivinä</string>
    <string name="phq9_answer_3">Useammin kuin puolet ajasta</string>
    <string name="phq9_answer_4">Lähes joka päivä</string>
</resources>
