<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="plugin_hyks"
    android:title="@string/app_name">

    <CheckBoxPreference
        android:key="status_plugin_hyks"
        android:defaultValue="false"
        android:persistent="true"
        android:summary="@string/setting_plugin_status" />

    <EditTextPreference
        android:key="hyks_start_hour"
        android:defaultValue="@integer/default_start_time"
        android:persistent="true"
        android:summary="@string/setting_start_hour"
        android:inputType="numberDecimal"/>

    <EditTextPreference
        android:key="hyks_end_hour"
        android:defaultValue="@integer/default_end_time"
        android:persistent="true"
        android:summary="@string/setting_end_hour"
        android:inputType="numberDecimal"/>

</PreferenceScreen>