<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/olo_2"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/olo_2_1"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <RatingBar
                    android:id="@+id/rb_olo_2_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numStars="6"
                    android:stepSize="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/olo_2_2"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <RatingBar
                    android:id="@+id/rb_olo_2_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numStars="6"
                    android:stepSize="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/olo_2_3"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <RatingBar
                    android:id="@+id/rb_olo_2_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numStars="6"
                    android:stepSize="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/olo_2_4"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <RadioGroup
                    android:id="@+id/olo2_4_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <RadioButton
                        android:id="@+id/olo_2_4_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/olo_2_4_1" />

                    <RadioButton
                        android:id="@+id/olo_2_4_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/olo_2_4_2" />

                    <RadioButton
                        android:id="@+id/olo_2_4_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/olo_2_4_3" />

                    <RadioButton
                        android:id="@+id/olo_2_4_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/olo_2_4_4" />

                    <RadioButton
                        android:id="@+id/olo_2_4_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/olo_2_4_5" />

                    <RadioButton
                        android:id="@+id/olo_2_4_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/olo_2_4_6" />

                    <RadioButton
                        android:id="@+id/olo_2_4_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/olo_1_7" />

                    <RadioButton
                        android:id="@+id/olo_2_4_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/olo_2_4_8" />

                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/esm_buttons_controls"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/olo_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/submit" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>