<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/olo_4"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/olo_4_1"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <RadioGroup
                    android:id="@+id/olo4_1_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <RadioButton
                        android:id="@+id/olo_4_1_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0" />

                    <RadioButton
                        android:id="@+id/olo_4_1_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0,5-1" />

                    <RadioButton
                        android:id="@+id/olo_4_1_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="2-3" />

                    <RadioButton
                        android:id="@+id/olo_4_1_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="4-5" />

                    <RadioButton
                        android:id="@+id/olo_4_1_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="yli 5" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/olo_4_2"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <RadioGroup
                    android:id="@+id/olo4_2_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <RadioButton
                        android:id="@+id/olo_4_2_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0" />

                    <RadioButton
                        android:id="@+id/olo_4_2_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="1-2" />

                    <RadioButton
                        android:id="@+id/olo_4_2_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="3-4" />

                    <RadioButton
                        android:id="@+id/olo_4_2_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="5-6" />

                    <RadioButton
                        android:id="@+id/olo_4_2_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="yli 6" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/olo_4_3"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <RadioGroup
                    android:id="@+id/olo4_3_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <RadioButton
                        android:id="@+id/olo_4_3_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0" />

                    <RadioButton
                        android:id="@+id/olo_4_3_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="1-2" />

                    <RadioButton
                        android:id="@+id/olo_4_3_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="3-5" />

                    <RadioButton
                        android:id="@+id/olo_4_3_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="yli 5" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/olo_4_4"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <RadioGroup
                    android:id="@+id/olo4_4_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <RadioButton
                        android:id="@+id/olo_4_4_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/olo_3_3_1" />

                    <RadioButton
                        android:id="@+id/olo_4_4_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/olo_3_3_2" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/olo_4_5"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <RadioGroup
                    android:id="@+id/olo4_5_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <RadioButton
                        android:id="@+id/olo_4_5_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/olo_3_3_1" />

                    <RadioButton
                        android:id="@+id/olo_4_5_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/olo_3_3_2" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/olo_4_6"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <RadioGroup
                    android:id="@+id/olo4_6_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <RadioButton
                        android:id="@+id/olo_4_6_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/olo_3_3_1" />

                    <RadioButton
                        android:id="@+id/olo_4_6_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/olo_3_3_2" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/olo_4_7"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <RadioGroup
                    android:id="@+id/olo4_7_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <RadioButton
                        android:id="@+id/olo_4_7_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/olo_3_3_1" />

                    <RadioButton
                        android:id="@+id/olo_4_7_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/olo_3_3_2" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/olo_4_7_1"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <RadioGroup
                    android:id="@+id/olo4_7_1_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <RadioButton
                        android:id="@+id/olo_4_7_1_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="kevyt" />

                    <RadioButton
                        android:id="@+id/olo_4_7_1_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="keskiraskas" />

                    <RadioButton
                        android:id="@+id/olo_4_7_1_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="raskas" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/olo_4_7_2"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <RatingBar
                    android:id="@+id/rb_olo_4_7_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:numStars="6"
                    android:stepSize="1" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/esm_buttons_controls"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/v4_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/submit" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>